2006-12-13  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/libegg/eggregex.c:
	* gtksourceview/libegg/eggregex.h:
	* gtksourceview/gtksourcecontextengine.c:
	* gtksourceview/gtksourcelanguage-parser-2.c:

	Updated eggregex from Marco Barisione's repo.

2006-12-11  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c:
	* gtksourceview/gtksourceview.h:

	Backport from HEAD the "indent-on-tab" property and other
	minor fixes.

2006-11-07  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcestylemanager.h:
	gtk_source_style_manager_reload is no longer public.
	* gtksourceview/gtksourcestylemanager.c: emit "changed"
	signal when search path changed.

2006-11-06  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/python.lang: added globs.
	* gtksourceview/language-specs/xml.lang: handle correctly
	xml atrributes with values enclosed into apostrophes
	<foo bar='blah'>.
	* gtksourceview/libegg/eggregex/eggregex.c: do not mix
	pcre and glib memory management api.
	* gtksourceview/gtksourcestylemanager.c: removed odd message
	about overridden scheme.
	* tests/test-widget.c: moved init_mem_stuff() call to the top
	of main(), so it gets executed before any glib functions when
	using g_mem_set_vtable().

2006-10-28  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcebuffer.c
	(gtk_soucre_buffer_set_bracket_match_style): don't fail
	when style is NULL.
	* gtksourceview/gtksourcecontextengine.[ch],
	gtksourceview/gtksourcelanguage-parser-2.c: less non-standard
	things like trailing comma in enums; got rid of anonymous structs.
	* gtksourceview/gtksourcelanguage.c (process_language_node): do not
	forget "mimetypes" attribute.
	* gtksourceview/gtksourcestylemanager.[ch]: GtkSourceStyleManager
	class.
	* gtksourceview/gtksourcelanguagesmanager.[ch]: moved style
	scheme stuff into GtkSourceStyleManager.
	* gtksourceview/gtksourcestyle.[ch]: removed _gtk_source_style_unapply;